# opt-repo

./: .gitignore  README.md  main.py  pyproject.toml
auxiliary/docker/: git_installaiton_Dockerfile
auxiliary/openhands-files/: command-temp.sh  command.sh  config-temp.toml  config.toml  run_openhands.py  task-patch-generation.txt  task-test-generation.txt
cache/extra_info/: commit_pr_mapping.txt  commit_with_pr_analysis.txt
collected_commits/: 1000_stars_maven_repos_with_perf_message.csv  1000_stars_mvnw_repos_with_perf_message.csv  1000_stars_with_java_modification_and_perf_message.csv
docker/: .dockerignore  Dockerfile  settings.xml
results/: dataset.csv  dataset_bak_bak.csv
results/charts/: executable_etips_stats.py  github_commit_repo_cache.json  repos.py  stars_year.py
results/jmh-analysis/: repo-jmh-checking.txt
results/manual_analysis/: accuracy_analysis.csv  etip_detector_test_analysis.csv  generated-patch-manual_analysis.csv  generated_patch_manual_analysis.csv  openhands_rq2_table.tex  precision_analysis.csv  recall_analysis.csv  repo-jmh-checking.txt
results/patch-generation/: manual_analysis.csv  patch_0021f17028d9d98602e5d773eca7b6f7a2cfa7e0.patch  patch_01d7a35d2dc2b340462ab38b4f2a6e1031d991b6.patch  patch_02dfb4bd8a29dd7b83a34130cce956f2d910b9cf.patch  patch_067e88811c98fcf75b38c92c32c283d11960ce01.patch  patch_0fb717a97f2b954908b6756e17d97304e0b1ea27.patch  patch_10f06e9eb7c23aadb14e564b469f4b39f7af1e6f.patch  (+53 more)
results/tables/: modified.py
scripts/: extract_commits_from_logs.py
src/: config.py  constants.py  run_analysis.py  utils.py
(+175 files in other folders)
