[project]
name = "dataset"
version = "0.1.0"
description = ""
authors = [
    {name = "khaes-kth",email = "khaes@kth.se"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygithub (>=2.6.1,<3.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
